# evbuddy

./: .dockerignore  .env.compose.example  .gitignore  CONTRIBUTIONS.md  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  dvc.yml
data/: raw.dvc
data/interim/: .gitignore  ports.csv
data/interim/features/: .gitignore  stations_timeseries.csv  stations_timeseries_encoded.csv  stations_timeseries_selected.csv
data/interim/oh_opendata_datasets_csv/: 2024_1T_locations_punts_recarrega_mi_with_opening_hours.csv  2025_2T_locations_punts_recarrega_mi_with_opening_hours.csv  2025_3T_locations_punts_recarrega_mi_with_opening_hours.csv
data/interim/opendata_datasets(csv)/: 2024_2T_locations_punts_recarrega_mi_with_opening_hours.csv  2024_3T_locations_punts_recarrega_mi_with_opening_hours.csv  2024_4T_locations_punts_recarrega_mi_with_opening_hours.csv  2025_1T_locations_punts_recarrega_mi_with_opening_hours.csv  2025_4T_locations_punts_recarrega_mi_with_opening_hours.csv
data/opendata_datasets/: 2022_3T_locations_punts_recarrega_mi.json  2025_4T_locations_punts_recarrega_mi.json
data/processed/: .gitattributes  dense_10min.parquet
data/raw/: .gitignore  bcn_holidays_2022_2026.csv  opendata_datasets_csv.dvc
data/raw/opendata_datasets(csv)/: 2022_3T_locations_punts_recarrega_mi.csv  2023_1T_locations_punts_recarrega_mi.csv  2023_2T_locations_punts_recarrega_mi.csv  2023_3T_locations_punts_recarrega_mi.csv  (+6 more)
docs/: ARCHITECTURE.md  DEPLOYMENT_RUNBOOK.md
models/: LICENSE.md  metrics_h10m.json
models/no_scale_pos_weight/: metrics_h20m.json  metrics_h30m.json  xgb_occupied_h10m.json  xgb_occupied_h20m.json  xgb_occupied_h30m.json
models/with_scale_pos_weight/: metrics_h10m.json  metrics_h20m.json  metrics_h30m.json  xgb_occupied_h10m.json  xgb_occupied_h20m.json  xgb_occupied_h30m.json
src/data/: add_prefix.py  build_features.py  concat_csv.py  extract_nested.py  feature_encoding.py  feature_sanity_check.py  feature_selection.py  json_to_csv.py  locations_study.py  ports_study.py  sanity_check_columns.py  stations.py  stations_study.py  timestamps.py
src/features/: feature_transform.py
src/models/: train_models.py  train_models_pandas.py
src/utils/: __init__.py  utils.py
src/visualisation/: dimensionality.py  distributions.py  gap_diagnostics.py  granularity.py  sparsity.py
tests/: conftest.py  test_build_features.py  test_extract_nested.py  test_feature_selection.py  test_feature_transform.py  test_train_models.py  test_train_models_pandas.py
tests/contracts/: test_selected_timeseries_contract.py
tests/integration/: test_visualisation_smoke.py
tests/quality/: test_metrics_thresholds.py
(+15 files in other folders)
