[project]
name = "evbuddy"
version = "0.1.0"
description = ""
authors = [
    {name = "Diogo Miranda",email = "diogomsmiranda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "dask (>=2026.1.2,<2027.0.0)",
    "distributed (>=2026.1.2,<2027.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "dvc (>=3.66.1,<4.0.0)",
    "dvc-ssh (>=4.2.2,<5.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "memory-profiler (>=0.61.0,<0.62.0)",
    "mlflow (>=3.10.0,<4.0.0)",
    "graphene (>=3.4.3,<4.0.0)",
    "graphql-core (>=3.2.6,<4.0.0)",
    "graphql-relay (>=3.2.0,<4.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
